--- a/cached_network_image/pubspec.yaml
+++ b/cached_network_image/pubspec.yaml
@@ -4,23 +4,16 @@ description: Flutter library to load and cache network images.
 homepage: https://github.com/Baseflow/flutter_cached_network_image
 version: 3.3.0
 environment:
-  flutter: '>=3.10.0'
   sdk: '>=3.0.0 <4.0.0'
+  flutter: '>=3.10.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_cache_manager:
-    git:
-      url: https://github.com/Carapacik/flutter_cache_manager.git
-      path: flutter_cache_manager
+  flutter_cache_manager: ^3.4.0
   octo_image: ^1.0.2
-  cached_network_image_platform_interface:
-    path:
-      ../cached_network_image_platform_interface
-  cached_network_image_web:
-    path:
-      ../cached_network_image_web
+  cached_network_image_platform_interface: ^2.1.0
+  cached_network_image_web: ^1.1.0
 
 dev_dependencies:
   file: '>=6.0.0 <8.0.0'
