--- a/cached_network_image_platform_interface/pubspec.yaml
+++ b/cached_network_image_platform_interface/pubspec.yaml
@@ -2,7 +2,6 @@ name: cached_network_image_platform_interface
 description: Platform interface for CachedNetworkImage
 version: 2.1.0
 homepage: https://github.com/Baseflow/flutter_cached_network_image
-
 environment:
   sdk: '>=3.0.0 <4.0.0'
   flutter: '>=3.10.0'
@@ -10,10 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_cache_manager:
-    git:
-      url: https://github.com/Carapacik/flutter_cache_manager.git
-      path: flutter_cache_manager
+  flutter_cache_manager: ^3.4.0
 
 dev_dependencies:
   file: '>=6.0.0 <8.0.0'
