--- a/cached_network_image_web/pubspec.yaml
+++ b/cached_network_image_web/pubspec.yaml
@@ -2,7 +2,6 @@ name: cached_network_image_web
 description: Web implementation of CachedNetworkImage
 version: 1.1.0
 homepage: https://github.com/Baseflow/flutter_cached_network_image
-
 environment:
   sdk: '>=3.0.0 <4.0.0'
   flutter: '>=3.10.0'
@@ -10,13 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_cache_manager:
-    git:
-      url: https://github.com/Carapacik/flutter_cache_manager.git
-      path: flutter_cache_manager
-  cached_network_image_platform_interface:
-    path:
-      ../cached_network_image_platform_interface
+  flutter_cache_manager: ^3.4.0
+  cached_network_image_platform_interface: ^2.1.0
 
 dev_dependencies:
   file: '>=6.0.0 <8.0.0'
