--- a/cached_network_image/example/pubspec.yaml
+++ b/cached_network_image/example/pubspec.yaml
@@ -1,15 +1,11 @@
 name: example
-description: A new Flutter project.
-
+description: A project that showcases usage of cached_network_image
 environment:
   sdk: '>=3.0.0 <4.0.0'
   flutter: '>=3.10.0'
 
 dependencies:
-  baseflow_plugin_template:
-    git:
-      url: https://github.com/Baseflow/baseflow_plugin_template.git
-      ref: v2.1.0
+  baseflow_plugin_template: ^2.1.2
   cached_network_image:
     path: ../
   cupertino_icons: ^1.0.5
@@ -24,8 +20,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-
-  # To add assets to your application, add an assets section, like this:
   assets:
     - packages/baseflow_plugin_template/logo.png
     - packages/baseflow_plugin_template/poweredByBaseflow.png
