--- a/cached_network_image_platform_interface/pubspec.yaml
+++ b/cached_network_image_platform_interface/pubspec.yaml
@@ -9,7 +9,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_cache_manager: ^3.3.1
+  flutter_cache_manager:
+    git:
+      url: https://github.com/Carapacik/flutter_cache_manager.git
+      path: flutter_cache_manager
 
 dev_dependencies:
   file: '>=6.1.4 <8.0.0'
