--- a/cached_network_image_web/pubspec.yaml
+++ b/cached_network_image_web/pubspec.yaml
@@ -9,8 +9,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_cache_manager: ^3.3.1
-  cached_network_image_platform_interface: ^2.0.1
+  flutter_cache_manager:
+    git:
+      url: https://github.com/Carapacik/flutter_cache_manager.git
+      path: flutter_cache_manager
+  cached_network_image_platform_interface:
+    path: ../cached_network_image_platform_interface
 
 dev_dependencies:
   file: '>=6.1.4 <8.0.0'
