--- a/cached_network_image_web/pubspec.yaml
+++ b/cached_network_image_web/pubspec.yaml
@@ -14,7 +14,10 @@ dependencies:
       url: https://github.com/Carapacik/flutter_cache_manager.git
       path: flutter_cache_manager
   cached_network_image_platform_interface:
-    path: ../cached_network_image_platform_interface
+    git:
+      url: https://github.com/Carapacik/flutter_cached_network_image.git
+      path: cached_network_image_platform_interface
+      ref: actual
 
 dev_dependencies:
   file: '>=6.1.4 <8.0.0'
