--- a/cached_network_image/example/pubspec.yaml
+++ b/cached_network_image/example/pubspec.yaml
@@ -3,14 +3,13 @@ description: A project that showcases usage of cached_network_image
 publish_to: none
 version: 1.0.0+1
 environment:
-  sdk: ^3.0.0
-  flutter: '>=3.10.0'
+  sdk: '>=2.18.0 <4.0.0'
+  flutter: '>=3.3.0'
 
 dependencies:
   baseflow_plugin_template: ^2.1.2
   cached_network_image:
     path: ../
-  cupertino_icons: ^1.0.5
   flutter:
     sdk: flutter
   flutter_blurhash: ^0.7.0
